hero image added to contact-us.html

--- a/contact-us.html
+++ b/contact-us.html
@@ -89,6 +89,13 @@
         
     </header>
 
+    <section>
+        <div class="container-fluid contact-hero-image">
+            <div class="opaque-overlay">&nbsp;</div>
+
+        </div>
+    </section>
+
     <section class="content-background">
         <div class="container-fluid">
             <div class="row">
@@ -120,9 +127,10 @@
                     </details>
                 </div>
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                    <h2 class="faq-headings text-center">Your Enquiry</h2>
                     <form>
                         <div class="row">
-                            <div class="col">
+                            <div class="col">                  
                             <input type="text" class="form-control" placeholder="First name">
                             </div>
                             <div class="col">
@@ -139,6 +147,7 @@
                                 <div class="form-group">
                                     <label for="exampleFormControlTextarea1">Example textarea</label>
                                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                    <button class="btn btn-md delivery-button" role="button">Submit</button>
                                 </div>
                             </div>
                         </div>
