hero image title edited on contact-us.html

--- a/contact-us.html
+++ b/contact-us.html
@@ -92,7 +92,11 @@
     <section>
         <div class="container-fluid contact-hero-image">
             <div class="opaque-overlay">&nbsp;</div>
-
+            <div class="row">
+                <div class="col-12">
+                    <h1 class="image-headings">Contact Us</h1>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -140,13 +144,13 @@
                         <div class="row">
                             <div class="col">
                                 <div class="form-group">
-                                    <label for="exampleInputEmail1">Email address</label>
-                                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                                    <label for="contactEmail">Email address</label>
+                                    <input type="email" class="form-control" id="contactEmail" aria-describedby="emailHelpContact" placeholder="Enter email">
+                                    <small id="emailHelpContact" class="form-text text-muted">We'll never share your email with anyone else.</small>
                                 </div>
                                 <div class="form-group">
-                                    <label for="exampleFormControlTextarea1">Example textarea</label>
-                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                    <label for="enquiryDetails">Enquiry Details</label>
+                                    <textarea class="form-control" id="enquiryDetails" rows="3"></textarea>
                                     <button class="btn btn-md delivery-button" role="button">Submit</button>
                                 </div>
                             </div>
