--- a/crates.html
+++ b/crates.html
@@ -73,7 +73,7 @@
                         <a class="nav-link" href="#">Beers</a>
                     </li> 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Breweries</a>
+                        <a class="nav-link" href="breweries.html">Breweries</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="crates.html">Customize Your Crate</a>
