edits to cards on breweries.html

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Beers</h5>
                             <p class="card-text">Explore our range of beers</p>
-                            <a href="bottle-shop.html" class="btn btn-sm card-button">Click here</a>
+                            <a href="beers.html" class="btn btn-sm card-button">Click here</a>
                         </div>
                     </div>
                 </div>
