titles added to breweries.html

--- a/breweries.html
+++ b/breweries.html
@@ -103,6 +103,12 @@
     <section class="content-background">
         <div class="container-fluid">
             <div class="row">
+                <div class="col">
+                    <h2 class="headings text-center">Central Scotland</h2>
+                    <hr class="block-divider">
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3 features">
                     <div class="card mx-auto text-center" style="width:18rem;">
                         <img src="https://pbs.twimg.com/profile_images/2085656841/WEST_LOGO_400x400.jpg" class="card-img-top" alt="West Brewery Logo">
@@ -111,17 +117,6 @@
                             <p class="card-title text-uppercase">Glasgow</p>
                             <p class="card-text">WEST's state of the art brewery resides within the winding house of the magnificent Templeton Building overlooking Glasgow Green and produces award-winning, German-style lagers and wheat beers.</p>
                             <a href="https://www.westbeer.com" target="_blank" class="btn btn-sm card-button">Visit Website</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3 features">
-                    <div class="card mx-auto text-center" style="width: 18rem;">
-                        <img src="https://www.fiercebeer.com/uploads/images/cms/gallery/1557998970FierceBreweryExterior004.jpg" class="card-img-top" alt="Fierce Brewery Logo">
-                        <div class="card-body brew-card-body">
-                            <h5 class="card-title"><strong>Fierce</strong></h5>
-                            <p class="card-title text-uppercase">Aberdeen</p>
-                            <p class="card-text">Aberdeens first micro-brewery, FIERCE make flavour packed beers of all varieties. With their eye-catching marketing, these beers will turn your fridge into a modern art installation.</p>
-                            <a href="https://www.fiercebeer.com" target="_blank" class="btn btn-sm card-button">Visit Website</a>
                         </div>
                     </div>
                 </div>
@@ -138,45 +133,12 @@
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3 features">
                     <div class="card mx-auto text-center" style="width: 18rem;">
-                        <img src="https://pbs.twimg.com/profile_images/462266719910633472/hGbsV79Y.jpeg" class="card-img-top" alt="Isle of Skye Brewery Logo">
-                        <div class="card-body brew-card-body">
-                            <h5 class="card-title"><strong>Leann An Eilein</strong></h5>
-                            <p class="card-title text-uppercase">Isle of Skye</p>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, nisi nesciunt error iusto vel quibusdam nobis quam, voluptas ducimus deserunt in aspernatur dolorem rem qui ipsum nulla saepe ullam maxime?</p>
-                            <a href="https://skyeale.com" target="_blank" class="btn btn-sm card-button">Visit Website</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3 features">
-                    <div class="card mx-auto text-center" style="width:18rem;">
-                        <img src="https://www.tempestbrewco.com/sites/tempest/images/og-image.jpg" class="card-img-top" alt="Tempest Brewery Logo">
-                        <div class="card-body brew-card-body">
-                            <h5 class="card-title"><strong>Tempest Brewing Co.</strong></h5>
-                            <p class="card-title text-uppercase">Galashiels</p>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident libero amet ullam quae mollitia ipsam optio ipsum voluptatum beatae consequatur hic, illum aperiam tempore dolores nostrum, omnis odit impedit dicta!</p>
-                            <a href="https://www.tempestbrewco.com" target="_blank" class="btn btn-sm card-button">Visit Website</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3 features">
-                    <div class="card mx-auto text-center" style="width: 18rem;">
                         <img src="https://drthebeerbloguk.files.wordpress.com/2017/11/fallen.jpg?w=863" class="card-img-top" alt="Fallen Brewery Logo">
                         <div class="card-body brew-card-body">
                             <h5 class="card-title"><strong>Fallen Brewing Co.</strong></h5>
                             <p class="card-title text-uppercase">Stirling</p>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident libero amet ullam quae mollitia ipsam optio ipsum voluptatum beatae consequatur hic, illum aperiam tempore dolores nostrum, omnis odit impedit dicta!</p>
                             <a href="https://www.fallenbrewing.co.uk" target="_blank" class="btn btn-sm card-button">Visit Website</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3 features">
-                    <div class="card mx-auto text-center" style="width: 18rem;">
-                        <img src="https://brewerydb-images.s3.amazonaws.com/brewery/z9kt21/upload_VpFoxz-squareLarge.png" class="card-img-top" alt="Orkney Brewery Logo">
-                        <div class="card-body brew-card-body">
-                            <h5 class="card-title"><strong>The Orkney Brewery</strong></h5>
-                            <p class="card-title text-uppercase">Orkney Isles</p>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident libero amet ullam quae mollitia ipsam optio ipsum voluptatum beatae consequatur hic, illum aperiam tempore dolores nostrum, omnis odit impedit dicta!</p>
-                            <a href="https://www.orkneybrewery.co.uk" target="_blank" class="btn btn-sm card-button">Visit Website</a>
                         </div>
                     </div>
                 </div>
@@ -202,6 +164,30 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="content-background-light">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <h2 class="headings text-center">Highlands</h2>
+                    <hr class="block-divider">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3 features">
+                    <div class="card mx-auto text-center" style="width: 18rem;">
+                        <img src="https://www.fiercebeer.com/uploads/images/cms/gallery/1557998970FierceBreweryExterior004.jpg" class="card-img-top" alt="Fierce Brewery Logo">
+                        <div class="card-body brew-card-body">
+                            <h5 class="card-title"><strong>Fierce</strong></h5>
+                            <p class="card-title text-uppercase">Aberdeen</p>
+                            <p class="card-text">Aberdeens first micro-brewery, FIERCE make flavour packed beers of all varieties. With their eye-catching marketing, these beers will turn your fridge into a modern art installation.</p>
+                            <a href="https://www.fiercebeer.com" target="_blank" class="btn btn-sm card-button">Visit Website</a>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3 features">
                     <div class="card mx-auto text-center" style="width: 18rem;">
                         <img src="https://drthebeerbloguk.files.wordpress.com/2018/02/loch-ness-logo.png?w=450" class="card-img-top" alt="Loch Ness Brewery Logo">
@@ -210,39 +196,6 @@
                             <p class="card-title text-uppercase">Aviemore</p>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum explicabo expedita vero quo dicta officiis iure corrupti incidunt ullam aperiam dolor maxime similique voluptatibus, omnis facere quaerat. </p>
                             <a href="https://www.lochnessbrewery.com" target="_blank" class="btn btn-sm card-button">Visit Website</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3 features">
-                    <div class="card mx-auto text-center" style="width: 18rem;">
-                        <img src="https://pbs.twimg.com/profile_images/520147861850165248/NEwNE84p_400x400.jpeg" class="card-img-top" alt="Arran Brewery Logo">
-                        <div class="card-body brew-card-body">
-                            <h5 class="card-title"><strong>Arran Brewery</strong></h5>
-                            <p class="card-title text-uppercase">Isle of Arran</p>
-                            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium cumque error omnis inventore consequuntur excepturi impedit doloribus nisi, tempore illo eligendi alias, beatae quod, nobis quidem iste.</p>
-                            <a href="https://www.arranbrewery.co.uk/home" target="_blank" class="btn btn-sm card-button">Visit Website</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3 features">
-                    <div class="card mx-auto text-center" style="width: 18rem;">
-                        <img src="https://le-cdn.website-editor.net/005f2693aa3c429bb2a1a5d351e348fa/dms3rep/multi/opt/4B45D3A4-94D4-4C35-AD72-8AC7A55246F0-16b4cdca-640w.jpeg" class="card-img-top" alt="Isle of Harris Brewery Logo">
-                        <div class="card-body brew-card-body">
-                            <h5 class="card-title"><strong>Isle of Harris Brewery</strong></h5>
-                            <p class="card-title text-uppercase">Tarbert | Harris</p>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam maiores corporis eius alias, eum perferendis, voluptatem earum est, et animi ex iusto debitis nisi cum odit! Nam cupiditate debitis alias?</p>
-                            <a href="https://www.isleofharrisbrewery.com" target="_blank" class="btn btn-sm card-button">Visit Website</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3 features">
-                    <div class="card mx-auto text-center" style="width:18rem;">
-                        <img src="https://untappd.akamaized.net/site/brewery_logos_hd/brewery-260_40f37_hd.jpeg" class="card-img-top" alt="Broughton Ales Logo">
-                        <div class="card-body brew-card-body">
-                            <h5 class="card-title"><strong>Broughton Ales</strong></h5>
-                            <p class="card-title text-uppercase">Biggar</p>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident libero amet ullam quae mollitia ipsam optio ipsum voluptatum beatae consequatur hic, illum aperiam tempore dolores nostrum, omnis odit impedit dicta!</p>
-                            <a href="https://broughtonales.co.uk" target="_blank" class="btn btn-sm card-button">Visit Website</a>
                         </div>
                     </div>
                 </div>
@@ -281,7 +234,98 @@
                 </div>
             </div>
         </div>
+    </section>
 
+    <section class="content-background">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <h2 class="headings text-center">Islands</h2>
+                    <hr class="block-divider">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3 features">
+                    <div class="card mx-auto text-center" style="width: 18rem;">
+                        <img src="https://pbs.twimg.com/profile_images/462266719910633472/hGbsV79Y.jpeg" class="card-img-top" alt="Isle of Skye Brewery Logo">
+                        <div class="card-body brew-card-body">
+                            <h5 class="card-title"><strong>Leann An Eilein</strong></h5>
+                            <p class="card-title text-uppercase">Isle of Skye</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, nisi nesciunt error iusto vel quibusdam nobis quam, voluptas ducimus deserunt in aspernatur dolorem rem qui ipsum nulla saepe ullam maxime?</p>
+                            <a href="https://skyeale.com" target="_blank" class="btn btn-sm card-button">Visit Website</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3 features">
+                    <div class="card mx-auto text-center" style="width: 18rem;">
+                        <img src="https://brewerydb-images.s3.amazonaws.com/brewery/z9kt21/upload_VpFoxz-squareLarge.png" class="card-img-top" alt="Orkney Brewery Logo">
+                        <div class="card-body brew-card-body">
+                            <h5 class="card-title"><strong>The Orkney Brewery</strong></h5>
+                            <p class="card-title text-uppercase">Orkney Isles</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident libero amet ullam quae mollitia ipsam optio ipsum voluptatum beatae consequatur hic, illum aperiam tempore dolores nostrum, omnis odit impedit dicta!</p>
+                            <a href="https://www.orkneybrewery.co.uk" target="_blank" class="btn btn-sm card-button">Visit Website</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3 features">
+                    <div class="card mx-auto text-center" style="width: 18rem;">
+                        <img src="https://pbs.twimg.com/profile_images/520147861850165248/NEwNE84p_400x400.jpeg" class="card-img-top" alt="Arran Brewery Logo">
+                        <div class="card-body brew-card-body">
+                            <h5 class="card-title"><strong>Arran Brewery</strong></h5>
+                            <p class="card-title text-uppercase">Isle of Arran</p>
+                            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium cumque error omnis inventore consequuntur excepturi impedit doloribus nisi, tempore illo eligendi alias, beatae quod, nobis quidem iste.</p>
+                            <a href="https://www.arranbrewery.co.uk/home" target="_blank" class="btn btn-sm card-button">Visit Website</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3 features">
+                    <div class="card mx-auto text-center" style="width: 18rem;">
+                        <img src="https://le-cdn.website-editor.net/005f2693aa3c429bb2a1a5d351e348fa/dms3rep/multi/opt/4B45D3A4-94D4-4C35-AD72-8AC7A55246F0-16b4cdca-640w.jpeg" class="card-img-top" alt="Isle of Harris Brewery Logo">
+                        <div class="card-body brew-card-body">
+                            <h5 class="card-title"><strong>Isle of Harris Brewery</strong></h5>
+                            <p class="card-title text-uppercase">Tarbert | Harris</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam maiores corporis eius alias, eum perferendis, voluptatem earum est, et animi ex iusto debitis nisi cum odit! Nam cupiditate debitis alias?</p>
+                            <a href="https://www.isleofharrisbrewery.com" target="_blank" class="btn btn-sm card-button">Visit Website</a>
+                        </div>
+                    </div>
+                </div>          
+            </div>
+        </div>
+    </section>
+
+    <section class="content-background-light">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <h2 class="headings text-center">Borders</h2>
+                    <hr class="block-divider">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3 features">
+                    <div class="card mx-auto text-center" style="width:18rem;">
+                        <img src="https://www.tempestbrewco.com/sites/tempest/images/og-image.jpg" class="card-img-top" alt="Tempest Brewery Logo">
+                        <div class="card-body brew-card-body">
+                            <h5 class="card-title"><strong>Tempest Brewing Co.</strong></h5>
+                            <p class="card-title text-uppercase">Galashiels</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident libero amet ullam quae mollitia ipsam optio ipsum voluptatum beatae consequatur hic, illum aperiam tempore dolores nostrum, omnis odit impedit dicta!</p>
+                            <a href="https://www.tempestbrewco.com" target="_blank" class="btn btn-sm card-button">Visit Website</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3 features">
+                    <div class="card mx-auto text-center" style="width:18rem;">
+                        <img src="https://untappd.akamaized.net/site/brewery_logos_hd/brewery-260_40f37_hd.jpeg" class="card-img-top" alt="Broughton Ales Logo">
+                        <div class="card-body brew-card-body">
+                            <h5 class="card-title"><strong>Broughton Ales</strong></h5>
+                            <p class="card-title text-uppercase">Biggar</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident libero amet ullam quae mollitia ipsam optio ipsum voluptatum beatae consequatur hic, illum aperiam tempore dolores nostrum, omnis odit impedit dicta!</p>
+                            <a href="https://broughtonales.co.uk" target="_blank" class="btn btn-sm card-button">Visit Website</a>
+                        </div>
+                    </div>
+                </div>                     
+            </div>
+        </div>
     </section>
 
 
