--- a/crates.html
+++ b/crates.html
@@ -70,7 +70,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Beers</a>
+                        <a class="nav-link" href="beers.html">Beers</a>
                     </li> 
                     <li class="nav-item">
                         <a class="nav-link" href="breweries.html">Breweries</a>
