hero image added to beers.html

--- a/breweries.html
+++ b/breweries.html
@@ -108,7 +108,7 @@
                     <hr class="block-divider">
                 </div>
             </div>
-            <div class="row">
+            <div class="row no-gutters justify-content-center">
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3 features">
                     <div class="card mx-auto text-center" style="width:18rem;">
                         <img src="https://pbs.twimg.com/profile_images/2085656841/WEST_LOGO_400x400.jpg" class="card-img-top" alt="West Brewery Logo">
@@ -176,7 +176,7 @@
                     <hr class="block-divider">
                 </div>
             </div>
-            <div class="row">
+            <div class="row no-gutters justify-content-center">
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3 features">
                     <div class="card mx-auto text-center" style="width: 18rem;">
                         <img src="https://www.fiercebeer.com/uploads/images/cms/gallery/1557998970FierceBreweryExterior004.jpg" class="card-img-top" alt="Fierce Brewery Logo">
@@ -244,7 +244,7 @@
                     <hr class="block-divider">
                 </div>
             </div>
-            <div class="row">
+            <div class="row no-gutters justify-content-center">
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3 features">
                     <div class="card mx-auto text-center" style="width: 18rem;">
                         <img src="https://pbs.twimg.com/profile_images/462266719910633472/hGbsV79Y.jpeg" class="card-img-top" alt="Isle of Skye Brewery Logo">
@@ -301,7 +301,7 @@
                     <hr class="block-divider">
                 </div>
             </div>
-            <div class="row">
+            <div class="row no-gutters justify-content-center">
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3 features">
                     <div class="card mx-auto text-center" style="width:18rem;">
                         <img src="https://www.tempestbrewco.com/sites/tempest/images/og-image.jpg" class="card-img-top" alt="Tempest Brewery Logo">
