IPA's & Pale Ales added to Beers.html

--- a/breweries.html
+++ b/breweries.html
@@ -280,12 +280,12 @@
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3 features">
                     <div class="card mx-auto text-center" style="width: 18rem;">
-                        <img src="https://le-cdn.website-editor.net/005f2693aa3c429bb2a1a5d351e348fa/dms3rep/multi/opt/4B45D3A4-94D4-4C35-AD72-8AC7A55246F0-16b4cdca-640w.jpeg" class="card-img-top" alt="Isle of Harris Brewery Logo">
+                        <img src="https://pbs.twimg.com/profile_images/1867281747/islay-ales.gif" class="card-img-top" alt="Islay Ales Logo">
                         <div class="card-body brew-card-body">
-                            <h5 class="card-title"><strong>Isle of Harris Brewery</strong></h5>
-                            <p class="card-title text-uppercase">Tarbert | Harris</p>
+                            <h5 class="card-title"><strong>Islay Ales</strong></h5>
+                            <p class="card-title text-uppercase">Isle of Islay</p>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam maiores corporis eius alias, eum perferendis, voluptatem earum est, et animi ex iusto debitis nisi cum odit! Nam cupiditate debitis alias?</p>
-                            <a href="https://www.isleofharrisbrewery.com" target="_blank" class="btn btn-sm card-button">Visit Website</a>
+                            <a href="https://www.islayales.com/" target="_blank" class="btn btn-sm card-button">Visit Website</a>
                         </div>
                     </div>
                 </div>          
