block divider fix on index.html

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <h2 class="d-none d-sm-block">New Year, New Beer!</h2>
                         <h1 class="display-4">Scottish Craft Beer To Your Door!</h1>
                         <p class="lead d-none d-md-block">Grab a mixed crate of some of Scotlands best artisan and craft beers.</p>
-                        <hr>
+                        <hr class="block-divider-light">
                         <p class="jumbotron-text">Sign up today and you'll receive 12 beers every month!</p>
                         <p class="jumbotron-text">From just £12.99<strong> First Month is on us!</strong></p>
                         <button class="btn btn-md sign-up-button" data-toggle="modal" data-target="#signUpModal" role="button">Sign Up</button>
