How it works section added to index.html

--- a/index.html
+++ b/index.html
@@ -112,10 +112,44 @@
         </div>
     </section>
 
+    <section class="content-background-gradient">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <h2 class="headings text-center">How it works</h2>
+                    <hr class="block-divider">
+                </div>
+            </div>
+            <div class="row no-gutters justify-content-center text-center">
+                <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 how-it-works-container">
+                    <img src="https://images.unsplash.com/photo-1423666639041-f56000c27a9a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=753&q=80" alt="Dark Ness Stout" class="how-it-works-image">
+                    <h3 class="headings">You Order</h3>
+                    <p class="content-text">Simply sign up & choose type of beers, frequency, and the date you'd like them delivered. </p>            
+                </div>
+                <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 how-it-works-container">
+                    <img src="https://static.independent.co.uk/s3fs-public/thumbnails/image/2020/08/25/11/online-beer-delivery.jpg" alt="Dark Ness Stout" class="how-it-works-image">
+                    <h3 class="headings">We Deliver</h3>
+                    <p class="content-text">We will deliver beers right to your doorstep on your chosen date every month.</p>
+                </div>
+                <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 how-it-works-container">
+                    <img src="https://images.unsplash.com/photo-1436076863939-06870fe779c2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="Dark Ness Stout" class="how-it-works-image">
+                    <h3 class="headings">You Enjoy</h3>
+                    <p class="content-text">Enjoy some of the latest and greatest beers Scotland has to offer. </p>
+                </div>           
+            </div>
+        </div>
+    </section>
+
     <!-- Features Section -->
-    <section class="content-background">
+    <section class="content-background-light">
         <div class="container">
             <div class="row">
+                <div class="col">
+                    <h2 class="headings text-center">Explore</h2>
+                    <hr class="block-divider">
+                </div>
+            </div>
+            <div class="row justify-content-center">
                 <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-4 features">
                     <div class="card mx-auto text-center" style="width:18rem;">
                         <img src="https://images.unsplash.com/photo-1589711428920-bf084b80e0bd?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="card-img-top" alt="beers on counter">
