--- a/crates.html
+++ b/crates.html
@@ -136,6 +136,10 @@
                             <option>12 - £24.99</option>
                             </select>
                         </div>
+                        <div class="form-group">
+                            <label for="deliveryDate">Choose Your Delivery Date</label>
+                            <input type="date" class="form-control" id="deliveryDate">
+                        </div>
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
                             <label class="form-check-label" for="exampleRadios1">
