--- a/index.html
+++ b/index.html
@@ -112,6 +112,37 @@
         </div>
     </section>
 
+    <section class="content-background">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <h2 class="headings text-center">What our customers say</h2>
+                    <hr class="block-divider">
+                </div>
+            </div>
+            <div class="row no-gutters justify-content-center text-center">
+                <div class="col-12 col-sm-12 col-md-6 customer-image-container">
+                    <div class="media">
+                        <img src="https://images.unsplash.com/photo-1527980965255-d3b416303d12?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" class="align-self-center mr-3 customer-image" alt="...">
+                        <div class="media-body">
+                            <h5 class="headings">Top-aligned media</h5>
+                            <p class="content-text">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 customer-image-container">
+                    <div class="media">
+                        <img src="https://images.unsplash.com/photo-1527980965255-d3b416303d12?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" class="align-self-center mr-3 customer-image" alt="...">
+                        <div class="media-body">
+                            <h5 class="headings">Top-aligned media</h5>
+                            <p class="content-text">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="content-background-gradient">
         <div class="container-fluid">
             <div class="row">
