big fixed with logo and nav links underlined on all html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Logo Row -->
         <div class="container-fluid">
             <div class="row no-gutters">
-                <div class="col-sm-4 d-none d-md-block">
+                <div class="col-12 col-sm-12 col-md-4 d-none d-md-block">
 
                     <!-- Social Links Logo -->
                     <ul class="list-inline social-links social-links-logo">
@@ -46,7 +46,7 @@
 
                 <!-- Logo -->
                 <!--"Styling for horizontal lines taken from vclever.com"-->
-                <div class="col-sm-4">
+                <div class="col-12 col-sm-12 col-md-4">
                     <a href="index.html" class="no-underline">
                         <h3 class="text-center logo-abb">TT</h3>
                         <h1 class="text-center logo">Tartan Taps</h1>
@@ -54,7 +54,7 @@
                 </div>
 
                 <!-- Sign In/Sign Up Logo Row -->
-                <div class="col-sm-4 d-none d-md-block text-right">
+                <div class="col-12 col-sm-12 col-md-4 d-none d-md-block text-right">
                     <a data-toggle="modal" data-target="#signUpModal">
                         <h4 class="headings-logo">Sign In/Sign Up</h4>
                     </a>
@@ -71,7 +71,7 @@
             <div class="collapse navbar-collapse justify-content-center menu" id="navbarNavDropdown">
                 <ul class="navbar-nav navbar-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="beers.html">Beers</a>
@@ -123,19 +123,29 @@
             <div class="row no-gutters justify-content-center text-center">
                 <div class="col-12 col-sm-12 col-md-6 customer-image-container">
                     <div class="media">
-                        <img src="https://images.unsplash.com/photo-1527980965255-d3b416303d12?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" class="align-self-center mr-3 customer-image" alt="...">
+                        <img src="https://images.unsplash.com/photo-1527980965255-d3b416303d12?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" class="align-self-center mr-3 customer-image d-none d-sm-block" alt="Customer Image">
                         <div class="media-body">
-                            <h5 class="headings">Top-aligned media</h5>
-                            <p class="content-text">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+                            <h5 class="headings">Martin J</h5>
+                            <p class="content-text">I love Tartan Taps. The beers are always delivered on the date of my choosing, and there is always a good variety. When I have changed the crate sizes, or delivery date, this was easily done on the website, and was completely hassle free. </p>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-12 col-md-6 customer-image-container">
                     <div class="media">
-                        <img src="https://images.unsplash.com/photo-1527980965255-d3b416303d12?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" class="align-self-center mr-3 customer-image" alt="...">
+                        <img src="https://images.unsplash.com/photo-1508214751196-bcfd4ca60f91?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="align-self-center mr-3 customer-image d-none d-sm-block" alt="Customer Image">
                         <div class="media-body">
-                            <h5 class="headings">Top-aligned media</h5>
-                            <p class="content-text">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+                            <h5 class="headings">Susan T</h5>
+                            <p class="content-text">I'd highly recommend Tartan Taps to anyone. Signed up 6 months ago as a present to my husband and he couldn't be happier. The only thing he complains about is when I pinch a beer for myself. They are very helpful, friendly and efficient. </p>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
                         </div>
                     </div>
                 </div>
@@ -181,7 +191,7 @@
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-4 features">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-4 features">
                     <div class="card mx-auto text-center" style="width:18rem;">
                         <img src="https://images.unsplash.com/photo-1589711428920-bf084b80e0bd?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="card-img-top" alt="beers on counter">
                         <div class="card-body">
@@ -191,7 +201,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-4 features">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-4 features">
                     <div class="card mx-auto text-center" style="width: 18rem;">
                         <img src="https://images.unsplash.com/photo-1528823872057-9c018a7a7553?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="card-img-top" alt="brewery tanks">
                         <div class="card-body">
@@ -201,7 +211,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-4 features">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-4 features">
                     <div class="card mx-auto text-center" style="width: 18rem;">
                         <img src="https://images.unsplash.com/photo-1577670772839-befb49f0bee5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=751&q=80" class="card-img-top" alt="...">
                         <div class="card-body">
