--- a/beers.html
+++ b/beers.html
@@ -73,7 +73,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="beers.html">Beers</a>
+                        <a class="nav-link active" href="beers.html">Beers</a>
                     </li> 
                     <li class="nav-item">
                         <a class="nav-link" href="breweries.html">Breweries</a>
