--- a/breweries.html
+++ b/breweries.html
@@ -76,7 +76,7 @@
                         <a class="nav-link" href="beers.html">Beers</a>
                     </li> 
                     <li class="nav-item">
-                        <a class="nav-link" href="breweries.html">Breweries</a>
+                        <a class="nav-link active" href="breweries.html">Breweries</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="crates.html">Customize Your Crate</a>
