--- a/contact-us.html
+++ b/contact-us.html
@@ -82,7 +82,7 @@
                         <a class="nav-link" href="crates.html">Customize Your Crate</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact-us.html">Contact Us</a>
+                        <a class="nav-link active" href="contact-us.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
