--- a/contact-us.html
+++ b/contact-us.html
@@ -13,7 +13,7 @@
         <!-- Logo Row -->
         <div class="container-fluid">
             <div class="row no-gutters">
-                <div class="col-sm-4 d-none d-md-block">
+                <div class="col-12 col-sm-12 col-md-4 d-none d-md-block">
                     <!-- Social Links Logo -->
                     <ul class="list-inline social-links social-links-logo">
                     <li class="list-inline-item">
@@ -45,7 +45,7 @@
 
                 <!-- Logo -->
                 <!--"Styling for horizontal lines taken from vclever.com"-->
-                <div class="col-sm-4">
+                <div class="col-12 col-sm-12 col-md-4">
                     <a href="index.html" class="no-underline">
                         <h3 class="text-center logo-abb">TT</h3>
                         <h1 class="text-center logo">Tartan Taps</h1>
@@ -53,7 +53,7 @@
                 </div>
 
                 <!-- Sign In/Sign Up Logo Row -->
-                <div class="col-sm-4 d-none d-md-block text-right">
+                <div class="col-12 col-sm-12 col-md-4 d-none d-md-block text-right">
                     <a data-toggle="modal" data-target="#signUpModal">
                         <h4 class="headings-logo">Sign In/Sign Up</h4>
                     </a>
@@ -102,7 +102,7 @@
     </section>
 
     <section class="content-background">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
 
                 <!-- FAQ's -->
