--- a/crates.html
+++ b/crates.html
@@ -165,13 +165,13 @@
 
 
     <footer class="container-fluid">
-        <div class="row">
-            <div class="col-sm-4 footer-menu">
+        <div class="row justify-content-center">
+            <div class="col-12 col-sm-6 col-md-4 footer-menu">
                 <h4 class="footer-headings">Contact Us</h4>
                 <p class="information">Email: TartanTaps@gmail.com</p>
                 <p class="information">Phone: 07801 784 231</p>
             </div>
-            <div class="col-sm-4 footer-menu">
+            <div class="col-12 col-sm-6 col-md-4 footer-menu">
                 <h4 class="footer-headings">Find Us On</h4>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
@@ -201,7 +201,7 @@
                     
                 </ul>
             </div>
-            <div class="col-sm-4 d-none d-md-block footer-menu">
+            <div class="col-12 col-sm-6 col-md-4 footer-menu">
                 <h4 class="footer-headings">Sign In/Sign Up</h4>
                     <a data-toggle="modal" data-target="#signUpModal">
                         <i class="fas fa-beer" id="beer-sign" aria-hidden="true"></i>
