--- a/crates.html
+++ b/crates.html
@@ -102,7 +102,7 @@
 
             <!-- Customize your crates cards -->
             <div class="row">
-                <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 features">
+                <div class="col-12 col-sm-12 col-md-6 features">
                     <div class="card mx-auto text-center" style="width:18rem;">
                         <img src="https://www.redh.co.uk/media/ale_vs_beer.png" class="card-img-top" alt="beers on counter">
                         <div class="card-body">
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 features">
+                <div class="col-12 col-sm-12 col-md-6 features">
                     <div class="card mx-auto text-center" style="width:18rem;">
                         <img src="https://images.unsplash.com/photo-1441985969846-3e7c90531139?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="card-img-top" alt="beers on counter">
                         <div class="card-body">
